--- a/forecasts/corn.Rmd
+++ b/forecasts/corn.Rmd
@@ -89,6 +89,7 @@ plot(sma_corn)
 ses_corn <- ses(y = yield_training_ts, h = nobs_test, holdout = FALSE, silent = FALSE)
 autoplot(ses_corn)
 
+
 plot(yield_ts, col = 'black')
 lines(ses_corn$fitted, col = 'blue')
 lines(ses_corn$mean, col = 'blue')
@@ -100,6 +101,14 @@ print(sarima_corn)
 sarima_forecast <- forecast(object = sarima_corn, h = nobs_test)
 checkresiduals(sarima_forecast)
 autoplot(sarima_forecast)+ylab("Corn Yield")
+
+# sarima on last 50 years only
+recent_training_ts <- tail(yield_training_ts, 50)
+recent_sarima_corn <- auto.arima(recent_training_ts)
+recent_sarima_forecast <- forecast(object = recent_sarima_corn, h = nobs_test)
+checkresiduals(recent_sarima_forecast)
+autoplot(yield_ts)+
+  autolayer(recent_sarima_forecast)+ylab("Corn Yield")
 
 
 ```
@@ -120,6 +129,35 @@ lines(SSES_corn$forecast, col = 'blue')
 
 ```
 
+```{r}
+
+best_rmse <- Inf
+best_nn_forecast <- NULL
+best_nn_accuracy <- NULL
+best_params <- list()
+
+for (p in 1:6) {
+  for (P in 0:3) {
+
+    nnfit <- nnetar(yield_training_ts, p=p, P=P,  repeats=20)
+    nnfor <- forecast(nnfit, h=nobs_test)
+    acc <- accuracy(nnfor$mean, yield_test_ts)
+    rmse <- acc["Test set", "RMSE"]
+    if (rmse < best_rmse) {
+      best_rmse <- rmse
+      best_nn_forecast <- nnfor
+      best_nn_accuracy <- acc
+      best_params <- list(p=p, P=P)
+    }
+
+  }
+}
+
+
+autoplot(yield_ts) +
+  autolayer(best_nn_forecast$mean)
+```
+
 
 Checking accuracy
 ```{r}
@@ -128,9 +166,10 @@ sma_accuracy <- accuracy(sma_corn$forecast, yield_test_ts)
 ses_accuracy <- accuracy(ses_corn, yield_test_ts)
 
 sarima_accuracy <- accuracy(sarima_forecast, yield_test_ts)
-sarima_accuracy
+recent_sarima_accuracy <- accuracy(recent_sarima_forecast, yield_test_ts)
 
 sses_accuracy <- accuracy(SSES_corn$forecast, yield_test_ts)
+best_nn_accuracy
 
 
 # collect into one df
